# git-cliff-generator

./: 01eda.dummy  105a1.dummy  2a3e0.dummy  6178a.dummy  8f22b.dummy  b1a62.dummy  changelog.md  cliff.toml  d5d19.dummy  main.py  pyproject.toml
